Fix jump to bottom bar

--- a/css/raw/black.css
+++ b/css/raw/black.css
@@ -3997,7 +3997,7 @@ div#msg_input, div.msg_input_wrapper #primary_file_button, .c-filter_input, div#
 
 .c-fullscreen_modal__header .channel_options_header span { color: #919193; }
 
-.p-downloads_list__shift_hint { background: #323232; }
+.p-downloads_list__shift_hint, ts-jumper .p-jumper__help { background: #323232; }
 
 .c-fullscreen_modal__body .channel_option_item:hover { background: #484848; color: #e6e6e6; }
 
@@ -4010,3 +4010,5 @@ div#msg_input, div.msg_input_wrapper #primary_file_button, .c-filter_input, div#
 #client_body:not(.onboarding):not(.feature_global_nav_layout)::before { box-shadow: inset 1px 0 0 0 #222; }
 
 .p-channel_insights__message--truncate::before { background: linear-gradient(180deg,transparent,#363636 90%) !important; }
+
+#notification_banner:before { border-bottom: 1px solid #363636; }
